--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-4 border-top bg-light">
     <div class="container text-center">
-        <span class="text-secondary">© 2024 Maciej Wełpa | Proudly self-made and self-hosted at 30-198</span>
+        <span class="text-secondary">© 2024 Maciej Wełpa | Proudly self-hosted at 30-198</span>
 
         <!-- Ikony social media -->
         <div class="mt-2">
