--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url("{{ url_for('static', filename='img/python.jpg') }}"); /* Image for background */
+            background-image: url("{{ url_for('static', filename=content['bg-img']) }}"); /* Image for background */
             background-size: cover; /* Ensures the background covers the entire div */
             background-position: center; /* Centers the image */
             filter: blur(6px); /* Blurs the background */
