--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,12 +1,13 @@
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-4 border-top bg-light">
     <div class="container text-center">
-        <span class="text-secondary">© 2024 Maciej Wełpa | Proudly self-hosted at 30-198</span>
+        <span class="text-secondary">©2025 Maciej Wełpa | Proudly self-hosted at 30-198</span>
 
         <!-- Ikony social media -->
         <div class="mt-2">
-            {% for name, link in content["links"].items() %}
-            <a href="{{link[0]}}" class="text-secondary mx-2"><i class="{{link[1]}}"></i></a>
-            {% endfor %}
+            <a href="https://github.com/welmac0" class="text-secondary mx-2"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/mwelpa" class="text-secondary mx-2"><i class="fab fa-linkedin"></i></a>
+            <a href="https://x.com/MWelpa_" class="text-secondary mx-2"><i class="fab fa-x"></i></a>
+            <a href="mailto:mwelpa0@gmail.com" class="text-secondary mx-2"><i class="fa-at"></i></a>
         </div>
     </div>
 </footer>
